# mydatapreprocessing

./: .coverage.xml  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  TODO.md  changelog.md  conftest.py  data.parquet  demo.ipynb  environment.yml  pyproject.toml  requirements.txt  requirements_advanced.txt  requirements_dev.txt  requirements_extras.txt  setup.py  test.parquet  tested.parquet  tested2.csv  tested_data.csv  tested_data2.csv
.github/workflows/: codecov.yml
docs/: readme.md
docs/source/: conf.py  index.rst  modules.rst  mydatapreprocessing.consolidation.rst  (+25 more)
git_hooks/: pre-commit
mydatapreprocessing/: __init__.py  create_model_inputs.py  custom_types.py  database.py  feature_engineering.py  generate_data.py  generatedata.py  inputs.py  load_data.py  misc.py  preprocessing.py
requirements/: dev.txt  extras_all.txt  extras_datatypes.txt  requirements.txt  tests.txt
source/: modules.rst  tests.rst  tests.test_it.rst  tests.visual.rst
tests/: __init__.py  coverage.xml  helpers.py  test_consolidation.py  test_create_model_inputs.py  test_database.py  test_feature_engineering.py  test_helpers.py  test_inputs.py  test_integration.py  test_it.py  test_load_data.py  test_preprocessing.py  test_readme.py  test_readme_generated-1631827065.py  test_readme_generated-1633293677.py  test_readme_generated-1639176656.py  test_readme_generated-1654633759.py  test_readme_generated-1658072611.py  test_readme_generated-1658330347.py  test_readme_generated-1659804943.py  test_readme_generated.py  test_visual.py  visual.py
utils/: push_script.py
(+56 files in other folders)
